# iridium-core

./: .gitmodules  CMakeLists.txt  README.md
cmake/: ResTarget.cmake
include/iridium/core/: file.hpp  log.hpp  memory.hpp  string.hpp
src/: file.cpp  string.cpp
test/: CMakeLists.txt  ref_test.cpp  string_test.cpp
